syntax = "proto3";

package shared;

option go_package = "github.com/tmrrwnxtsn/ecomway/api/proto/shared";

enum TransactionType {
  PAYMENT = 0;
  PAYOUT = 1;
}

message Limits {
  string currency = 1;
  int64 min_amount = 2;
  int64 max_amount = 3;
}

enum CommissionType {
  PERCENT = 0;
  FIXED = 1;
  COMBINED = 2;
  TEXT = 3;
}

message Commission {
  CommissionType type = 1;
  optional string currency = 2;
  optional double percent = 3;
  optional double absolute = 4;
  map<string, string> message = 5;
}

message Method {
  string id = 1;
  map<string, string> displayed_name = 2;
  string external_system = 3;
  string external_method = 4;
  Limits limits = 5;
  Commission commission = 6;
}
